bluesummer/assets/css/style.css
body {
	font-family: 'Montserrat', sans-serif;
	font-size: 15px;
	overflow-x: hidden;
}

section {
	padding: 30px 0;
	width: 100%;
}

.grey-header {
	background: #e2e2e2;
}

.image {
	width: 100%;
}

.image-circle {
	width: 250px;
	height: 250px;
}

.image-fit {
	object-fit: cover;
	object-position: center;
}

.image-300 {
	width: 100%;
	height: 300px;
}

.image-600 {
	width: 100%;
	height: 609px;
}

.image-team-left-minus {
	margin-left: -120px;
	height: 290px
}

.parallax {
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.font-size-13 {
	font-size: 13px;
}

.btn-outline-white {
	color: #fff;
	background-color: transparent;
	background-image: none;
	border-color: #fff;
}

.btn-outline-white:hover {
	background: #fff;
	color: #000;
}

.btn-outline-primary {
	color: #043f70 !important;
	border: 2px solid #043f70 !important;
	font-weight: 700;
}

.btn-outline-primary:hover {
	background: #043f70 !important;
	color: #fff !important;
}

.section-title {
	text-align: center;
	text-transform: uppercase;
	font-weight: bold;
}

.section-line {
	margin: auto;
	width: 250px;
	height: 5px;
	background: #043f70;
}

.border-blue {
	border-bottom: 3px solid #043f70;
}

.width-full {
	width: 100%;
}

.rounded {
	border-radius: 10px !important;
}

.fa-rounded {
	border: 2px solid #fff;
	border-radius: 60px;
	padding: 0.6em 0.7em;
	text-align: center;
	cursor: pointer;
	transition: 0.3s ease-in-out;
	-webkit-transition: 0.3s ease-in-out;
	-moz-transition: 0.3s ease-in-out;
	-o-transition: 0.3s ease-in-out;
}

.fa-rounded:hover {
	color: #000;
	background: #fff;
}

/****
** Custom Color
**/

.blue {
	color: #043f70;
}

.white {
	color: #ffffff;
}

.border-blue {
	border: 2px solid #043f70;
}

.bg-blue {
	background: #043f70;
	color: #fff;
}

.bg-nav-light-grey {
	background: #e6e6e6;
}

.bg-nav-light-grey .nav-link {
	color: #262424;
}

.bg-grey {
	background: #e2e2e2;
}

.bg-light-grey {
	background: #f6f6f6;
}

/****
** Header Class
**/
.header{
 max-width: 100%;
}

/****
** Custom Navbar
**/

.navbar {
	padding: .9rem 4rem !important;
}

.navbar-transparent {
	background: transparent;
}

.navbar-absolute {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	z-index: 999;
}

.navbar-image {
	width: 7%;
}

.navbar-image-wedding {
	width: 5%;
}

.nav-item {
	margin: 0 20px;
}

.navbar-light {
	    box-shadow: 0px 2px 5px 0px;
}

.navbar-light .navbar-nav .nav-link {
	color: #043f70;
}

.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
	color: rgb(4, 63, 112);
	font-weight: bold;
}

.box-overlay {
    position: absolute;
    bottom: 0;
    color: white;
    text-align: left;
    padding: 30px;
    width: 95%;
	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0,0,0,0.8));
}

.bg-custom{
	background-color: #ffffffe8!important;
}

.nav-img, .nav-img-mini {
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.nav-img {
	max-width: 170px;
}

.nav-img-mini {
    max-width: 60px;
}

.nav-bb {
	border-bottom: 2px solid transparent;
}

.nav-bb:hover {
	border-bottom: 2px solid #fff;
}

.nav-item .nav-active {
	border-bottom: 2px solid #fff;
}

/****
** Music Categories
**/

.header-image {
	width: 100%;
}

/****
** Wedding Categories
**/

.wedding-header {
	width: 100%;
	height: 100vh;
}

.wedding-header-image {
	width: 100%;
	height: 100%;
}

.wedding-header-overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	background: rgba(0, 0, 0, 0.5);
}

.wedding-header-overlay-description {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	align-items: center;
	height: 100%;
	width: 100%;
}

.wedding-image {
	display: flex;
	justify-content: center;
	flex-direction: row;
	align-items: center;
}

.wedding-image-box img {
	width: 100%;
	height: 200px;
}

.wedding-image-row {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	padding: 0 4px;
}

.wedding-image-col {
	-ms-flex: 33.1%; /* IE10 */
	flex: 33.1%;
	max-width: 33.1%;
	padding: 0 4px;
}

.wedding-image-col img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

.wedding-team-wrapper {
	margin-left: -130px;
	margin-right: 30px;
}

.wedding-team-padding {
	padding-top: 100px;
	padding-bottom: 100px;
}

.wedding-team {
	width: 100%;
	height: 350px;
}

.wedding-team img {
	width: 100%;
	height: 100%;
}

/**
 * Wedding slideshow
 */

.wedding-slide-work {
	display: inline-block;
	width: 22%;
	position: relative;
	height: 350px;
}

.wedding-active-slide-work {
	width: 50%;
	height: 400px;
}

.wedding-slide-work img {
	width: 100%;
	height: 100%;
}

.wedding-slideshow-container {
	width: 100%;
	position: relative;
	margin: auto;
}

.wedding-fade-slideshow {
	-webkit-animation-name: fade;
  	-webkit-animation-duration: 1.5s;
  	animation-name: fade;
  	animation-duration: 1.5s;
}

@-webkit-keyframes fade {
	from {opacity: .4}
	to {opacity: 1}
}

@keyframes fade {
	from {opacity: .4}
	to {opacity: 1}
}

/****
** Film Custom
**/

.film-header {
	width: 100%;
	height: 100vh;
}

.film-header-image {
	width: 100%;
	height: 100%;
}

.film-header-overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
}

.film-header-overlay-description {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
	align-items: center;
	height: 100%;
	width: 100%;
}

.film-header-overlay-description .description {
	font-size: 14px;
}

.film-image {
	display: flex;
	justify-content: center;
	flex-direction: row;
	align-items: center;
}

.film-image-box {
	margin: 10px;
}

.film-image-box img {
	width: 100%;
	height: 200px;
}

.film-image-row {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	padding: 0 4px;
}

.image-horizontal {
	width: 100%;
	height: 100%;
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
}
/* ... */

